--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "chc-1",
+  "version": "1.0.4",
+  "main": "dist/index.js",
+  "type": "module",
   "devDependencies": {
     "bun-types": "^1.1.30"
-  }
+  },
+  "scripts": {
+    "build": "bun build src/index.ts --outdir dist"
+  },
+  "files": [
+    "dist"
+  ]
 }
