Use .d.ts for ts types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./services"
+    "rootDir": "./src"
   },
   "include": ["src/**/*"],      // Ensure TypeScript checks all source files
   "exclude": [
