--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,16 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
-    "paths": {
-      "*": ["*"],
-    },
-    "target": "ES2020",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "System",                  // Required to use `outFile`
+    "outFile": "dist/types.d.ts",        // Single bundled .d.ts file
+    "declaration": true,                 // Generate declaration files
+    "declarationMap": false,             // Disable maps for simpler setup
+    "emitDeclarationOnly": true,         // Emit only the .d.ts file
     "strict": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "declaration": true,
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],      // Ensure TypeScript checks all source files
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*"],               // Include all .ts files
+  "exclude": ["node_modules", "dist"]    // Exclude node_modules and dist
 }
