--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "outDir": "dist",                    // Output directory
-    "rootDir": "src",                    // Root source folder
+    "target": "ESNext",                  // Target JS version
+    "module": "ESNext",                  // Use ES modules
+    "outDir": "dist",                    // Output directory for compiled files
+    "rootDir": "src",                    // Root directory for the source files
     "declaration": true,                 // Generate .d.ts files
-    "declarationMap": false,             // (Optional) Don't generate source maps for .d.ts files
-    "emitDeclarationOnly": false,        // Emit both .js and .d.ts
+    "declarationMap": false,             // Disable source maps for declarations
+    "emitDeclarationOnly": false,        // Emit both .js and .d.ts files
     "strict": true,                      // Enable strict type-checking
     "esModuleInterop": true,             // Allow interop with CommonJS
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "skipLibCheck": true,                // Skip type checks on libraries
+    "forceConsistentCasingInFileNames": true // Enforce consistent casing in file names
   },
-  "include": ["src/**/*"],               // Include all files in src/
+  "include": ["src/**/*"],               // Include all .ts files in src
   "exclude": ["node_modules", "dist"]    // Exclude node_modules and dist
 }
