--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chc-1",
   "version": "1.0.8",
-  "main": "dist/index.ts",
-  "types": "dist/types.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "devDependencies": {
     "bun-types": "^1.1.30"
