--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,4 +18,4 @@ jobs:
       - run: npm ci
       - run: npm publish --provenance --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACTIONS_SDK_TS }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_CHSDK }}
