--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "chsdk",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ctrl-hub/sdk.ts"
+  },
   "version": "1.0.12",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
