Ignore tests directory in build step

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     }
   },
   "include": ["src/**/*"],               // Include all .ts files in src
-  "exclude": ["node_modules", "dist"],    // Exclude node_modules and dist,
+  "exclude": ["node_modules", "dist", "tests"],    // Exclude node_modules and dist,
 }
