--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bun-types": "^1.1.30"
   },
   "scripts": {
-    "build": "tsc && bun build src/index.ts --outdir dist"
+    "build": "tsc && bun build src/index.ts --outdir dist && cp -r src/types dist/types"
   },
   "files": [
     "dist"
