Convert to separate services, various tweaks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,11 @@
     "esModuleInterop": true,             // Allow interop with CommonJS
     "skipLibCheck": true,                // Skip type checks on libraries
     "forceConsistentCasingInFileNames": true, // Enforce consistent casing in file names
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {
-      "@models/*": ["src/models/*"],       // Alias for models
-      "@services/*": ["src/services/*"],   // Alias for services
-      "@utils/*": ["src/utils/*"],          // Alias for utils
-      "@src/*": ["src/*"]                  // Alias for src
+      "@models/*": ["models/*"],
+      "@utils/*": ["utils/*"],
+      "@services/*": ["services/*"]
     }
   },
   "include": [
