--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,14 @@
     "paths": {
       "@models/*": ["models/*"],
       "@utils/*": ["utils/*"],
-      "@services/*": ["services/*"]
+      "@services/*": ["services/*"],
+			"@decorators/*": ["decorators/*"]
     },
-	"verbatimModuleSyntax": true, // prevents importing types without using `import type`
-	"noUnusedLocals": true,
-	"noUnusedParameters": true,
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		"verbatimModuleSyntax": true, // prevents importing types without using `import type`
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
   },
   "include": [
     "src/**/*.ts",
